# aiko-gpt

./: .dockerignore  .env.example  .gitignore  AGENTS_COMPLETED.md  ARCHITECTURE_LANGGRAPH.md  Agents.md  BACKEND_VALIDATION.md  CHANGEMENTS_GENERATION_RAPPORT.md  CHECKPOINTER_CONFIG.md  CORRECTION_API_RESPONSES.md  CORRECTION_NOM_ENTREPRISE.md  DEBUG_GUIDE.md  DEMARRAGE.md  DEMARRAGE_SIMPLE.md  DOCKER_OK.md  Dockerfile  Dockerfile.api  Dockerfile.backend  Dockerfile.frontend  Dockerfile.streamlit  FIX_RESUME_NOM_ENTREPRISE.md  FRONTEND_PROGRESS.md  GUIDE_COMPLET_PROJET.md  IMPLEMENTATION_REPORT_GENERATION.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_STUDIO_GUIDE.md  OPTIMISATIONS_OPENAI.md  PERPLEXITY_SETUP.md  PROGRESSION.md  PROJET_COMPLETE.md  PROJET_FINAL.md  Point-Lanwenn-x-J-r-my-75351cea-2f64.json  QUICKSTART.md  QUICK_START_RAPPORT.md  README.md  README_DOCKER.md  REFERENCE_RAPIDE.md  REGENERATION_FEEDBACK.md  REPORT_GENERATION_GUIDE.md  RESUME_GENERATION_RAPPORT.md  (+48 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
OLD/: start_debug_server.py
api/: __init__.py  db_endpoints.py  http_app.py  langgraph_api.py  start_api.py  start_api_simple.py
app/: README.md  app.py  app_api.py  app_api.py.backup  run.py  run_api.py
assets/: README.md
atouts/: __init__.py  atouts_agent.py
backend/: .dockerignore  Dockerfile  README.md  graph_factory.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  need_analysis_agent_impl.py  nodes.py  report_agent_impl.py  transcript_agent_impl.py  use_case_analysis_agent_impl.py  web_search_agent_impl.py  workshop_agent_impl.py
backend/api/: __init__.py  app.py  report_routes.py  routes.py  upload_routes.py
backend/models/: __init__.py  graph_state.py  need_analysis_models.py  use_case_analysis_models.py  web_search_models.py
backend/need_analysis/: __init__.py  need_analysis_agent.py
backend/process_atelier/: __init__.py  workshop_agent.py
backend/process_transcript/: __init__.py  json_parser.py  pdf_parser.py  semantic_filter_agent.py  transcript_agent.py
backend/prompts/: __init__.py  need_analysis_agent_prompts.py  transcript_agent_prompts.py  use_case_analysis_prompts.py  web_search_agent_prompts.py  workshop_agent_prompts.py
backend/use_case_analysis/: __init__.py  use_case_analysis_agent.py
backend/utils/: __init__.py  report_generator.py  token_tracker.py
backend/web_search/: __init__.py  web_search_agent.py
backend/workflow/: __init__.py  need_analysis_workflow.py
config/: interviewers.json  mock_data.json
database/: EXPLICATION_FICHIERS.md  PLAN_INTEGRATION_STREAMLIT.md  README.md  __init__.py  clear_data.py  db.py  document_parser_service.py  fix_missing_extracted_text.py  init_db.py  models.py  repository.py  reset_db.py  schema.sql  schemas.py  streamlit_db.py  streamlit_example.py  test_connection.py
deploy/: deploy_gcp.sh
documents/: 1107-V0 Cas d'usages IA - Cousin.docx  atelier_exemple.xlsx
(+117 files in other folders)
