[project]
name = "aiko-gpt"
version = "0.1.0"
description = "Générateur de rapports assisté par IA"
authors = [
    {name = "AIKO", email = "contact@aiko.fr"}
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.28.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "pdfplumber>=0.10.0",
    "tavily-python>=0.7.12",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
